invert the blue gradient; fix issue with font slider overlapping mobile menu

--- a/web/wp-content/themes/onelove/assets/scss/_main.scss
+++ b/web/wp-content/themes/onelove/assets/scss/_main.scss
@@ -13,7 +13,7 @@ html head + body .green {
   background-image: linear-gradient(-137deg, #55C6B6 12%, #22CBB6 45%, #0FCCB6 88%);
 }
 html head + body .blue {
-  background-image: linear-gradient(-141deg, #00A3DF 0%, #095E9A 100%);
+  background-image: linear-gradient(-141deg, #095E9A 0%, #00A3DF 100%);
 }
 html head + body .navy {
   background: $midnight;
