--- a/web/wp-content/themes/onelove/assets/scss/layout/_header.scss
+++ b/web/wp-content/themes/onelove/assets/scss/layout/_header.scss
@@ -98,7 +98,7 @@ $header-height: 70;
     @include dimensions(100%,100%);
     overflow-y: scroll;
     margin-left: -1%;
-    z-index: 100;
+    z-index: 900;
 
     #site-navigation {
       background-color: transparent;
